--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -11,7 +11,7 @@
   height: 100px;
   position: absolute;
   background-color: #e41a1f;
-  /* transform: translateY(-100%); */
+  transform: translateY(-100%);
   top: 0;
   left: 0;
   width: 100%;
@@ -48,7 +48,7 @@
   padding: 0 1rem;
   box-sizing: border-box;
 }
-.article:first-of-type::before {
+.article:first-of-type .article__header {
   background-color: transparent;
 }
 .article__number {
