--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -11,7 +11,6 @@
   height: 100px;
   position: absolute;
   background-color: #e41a1f;
-  transform: translateY(-100%);
   top: 0;
   left: 0;
   width: 100%;
@@ -22,7 +21,7 @@
 }
 .article,
 .article__header {
-  mix-blend-mode: hard-light;
+  /* mix-blend-mode: hard-light; */
 }
 .article__text,
 .article__teaser,
@@ -38,7 +37,8 @@
 }
 .article__header {
   width: 100%;
-  color: #e41a1f;
+  color: black;
+  mix-blend-mode: hard-light;
   position: sticky;
   top: 0;
   display: flex;
@@ -65,6 +65,16 @@
   font-weight: normal;
   font-size: 56px;
   margin: 0;
+  position: absolute;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+.article:not(:first-of-type) .article__title {
+  background: #e41a1f;
+  color: #fff;
 }
 .article__teaser {
   min-height: 100vh;
