--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@ html, body {
   scroll-behavior: smooth;
 }
 body, input, button, label {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", serif;
 }
 a {
   text-decoration: none;
