--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -56,9 +56,10 @@
   left: 1rem;
   top: 0;
   margin: 0;
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", sans-serif;
   font-size: 90px;
   transform: translateY(7px);
+  cursor: pointer;
 }
 .article__title {
   font-family: "Bebas Neue", "Lato", sans-serif;
