--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Abril');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+
 @font-face {
   font-family: "Bebas Neue";
   src: url("../fonts/BebasNeue.otf");
@@ -7,8 +9,8 @@ html, body {
   font-size: 17px;
   scroll-behavior: smooth;
 }
-body, input, button, label {
-  font-family: "Lato", sans-serif;
+body, input, button, label, p {
+  font-family: Lato, serif;
 }
 a {
   text-decoration: none;
