load article implemented

--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -6,7 +6,7 @@
   text-align: center;
   position: relative;
 }
-.article::before {
+/* .article::before {
   content: "";
   height: 100px;
   position: absolute;
@@ -18,6 +18,42 @@
 .article::after {
   content: "";
   height: 100px;
+} */
+main .article[data-loaded="false"] {
+  height: 100px;
+  background: #e41a1f;
+  justify-content: center;
+}
+main .article[data-loaded="false"] ~ .article[data-loaded="false"] {
+  display: none;
+  content: none;
+}
+.article[data-loaded="false"]::before {
+  content: '';
+  height: 40px;
+  width: 40px;
+  background: #fff;
+  border-radius: 50%;
+  animation: pulse 1250ms linear infinite;
+}
+.article[data-loaded="false"]::after {
+  content: 'Artikel wird geladen...';
+  color: #fff;
+  margin-top: 0.5rem;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.4);
+    opacity: 0.4;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 .article,
 .article__header {
@@ -47,8 +83,9 @@
   align-items: center;
   padding: 0 1rem;
   box-sizing: border-box;
+  z-index: 97;
 }
-.article:first-of-type .article__header {
+.article .article__header {
   background-color: transparent;
 }
 .article__number {
@@ -58,7 +95,7 @@
   margin: 0;
   font-family: "Abril Fatface", sans-serif;
   font-size: 90px;
-  transform: translateY(7px);
+  transform: translateY(3px);
   cursor: pointer;
 }
 .article__title {
@@ -73,9 +110,9 @@
   width: 100%;
   justify-content: center;
 }
-.article:not(:first-of-type) .article__title {
-  background: #e41a1f;
-  color: #fff;
+.article .article__title {
+  /* background: #e41a1f; */
+  /* color: #fff; */
 }
 .article__teaser {
   min-height: 100vh;
