--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,5 +17,31 @@ a {
   color: currentColor;
 }
 main {
-  min-height: 200vh;
+  /* min-height: 200vh; */
+}
+
+.article-selection {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    flex-direction: column;
+    background: #e41a1f;
+    padding-right: 50vw;
+    box-sizing: border-box;
+    z-index: 110;
+    justify-content: space-around;
+}
+.article-selection--open {
+  display: flex;
+}
+.article-selection button {
+  background:none;
+  border: none;
+  color: #fff;
+  font-family: "Abril Fatface";
+  font-size: 2rem;
+  cursor: pointer;
 }
