--- a/src/assets/styles/article-selection.css
+++ b/src/assets/styles/article-selection.css
@@ -1,4 +1,4 @@
-.article-selection {
+.article-selection, .team-selection {
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -8,10 +8,10 @@
     overflow-y: auto;
     display: none;
 }
-.article-selection--open {
+.article-selection--open, .team-selection--open {
   display: initial;
 }
-.article-selection__inner {
+.article-selection__inner, .team-selection__inner {
     display: flex;
     height: 230vh;
     padding-top: 35px;
@@ -22,7 +22,7 @@
     justify-content: space-around;
     align-items: flex-start;
 }
-.article-selection__button {
+.article-selection__button, .team-selection__button {
   position: relative;
   background:none;
   border: none;
@@ -50,10 +50,10 @@
   margin-left: 2rem;
   opacity: 0;
 }
-.article-selection__button-num {
+.article-selection__button-num, .team-selection__button-num {
   transition: font-size 300ms ease-out;
 }
-.article-selection__button--active .article-selection__button-num {
+.article-selection__button--active .article-selection__button-num, .team-selection__button--active .team-selection__button-num {
   transition: font-size 250ms ease-out;
   font-size: 4.7rem;
 }
@@ -61,7 +61,7 @@
   transition: opacity 350ms 200ms ease-out;
   opacity: 1;
 }
-.article-selection__button--active ~ .article-selection__button--active .article-selection__button-num {
+.article-selection__button--active ~ .article-selection__button--active .article-selection__button-num, .team-selection__button--active ~ .team-selection__button--active .team-selection__button-num {
   transition: font-size 300ms 250ms ease-out;
   font-size: 2.5rem;
 }
