--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -5,11 +5,14 @@
   align-items: center;
   text-align: center;
   position: relative;
+  padding-bottom: 2rem;
+  box-sizing: border-box;
 }
 .article[data-loaded="false"] {
   height: 100px;
   background: #e41a1f;
   justify-content: center;
+  padding-bottom: 0;
 }
 .article[data-loaded="false"] ~ .article[data-loaded="false"] {
   display: none;
@@ -48,7 +51,6 @@
   top: 0;
   display: flex;
   height: 100px;
-  justify-content: center;
   align-items: center;
   padding: 0 1rem;
   box-sizing: border-box;
@@ -58,14 +60,19 @@
   background-color: transparent;
 }
 .article__number {
-  position: absolute;
-  left: 1rem;
-  top: 0;
   margin: 0;
   font-family: "Abril Fatface", sans-serif;
   font-size: 90px;
-  transform: translateY(3px);
   cursor: pointer;
+}
+.article__title-container {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .article__title {
   font-family: "Bebas Neue", "Lato", sans-serif;
@@ -73,12 +80,12 @@
   font-size: 56px;
   margin: 0;
   position: absolute;
-  height: 100px;
   display: flex;
   align-items: center;
   width: 100%;
   justify-content: center;
   color: #e41a1f;
+  transform: translateY(6px);
 }
 .article__teaser {
   min-height: 100vh;
