--- a/src/assets/styles/team.css
+++ b/src/assets/styles/team.css
@@ -1,12 +1,18 @@
 .team-member {
   width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
   text-align: center;
   position: relative;
-  align-items: flex-start;
+}
+.team-member__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 .team__name {
   position: absolute;
@@ -15,13 +21,10 @@
   margin: 0;
   font-family: "Abril Fatface", sans-serif;
   font-size: 90px;
-  transform: translateY(3px);
   cursor: pointer;
 }
 .team__text {
   max-width: 37%;
-  align-self: center;
-  transform: translateY(-150px);
   font-size: 25px;
 }
 .team__text::before, .team__text::after {
