--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -128,6 +128,7 @@
   }
   .article__number {
   font-size: 50px;
+  transform: translateY(0)
   }
   .article__title-container {
   justify-content: center;
