--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -38,3 +38,10 @@
   display: flex;
   flex-direction: column;
 }
+
+/* Responsive */
+@media screen and (max-width: 400px) {
+  .menu__list > li {
+    font-size: 50px;
+  }
+}
