--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -171,10 +171,15 @@
   padding: 0 1rem;
   box-sizing: border-box;
   z-index: 97;
-  /* background-color: #fff; */
   background-color: rgba(256, 256, 256, 0.9);
   }
   .article__title-container {
     z-index: 100;
+  }
+  .article__image {
+  width: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  object-fit: cover;
   }
 }
