--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -7,7 +7,7 @@
   background: #e41a1f;
   color: #fff;
   display: none;
-  z-index: 100;
+  z-index: 101;
 }
 .menu--open {
   display: flex;
@@ -42,6 +42,10 @@
 /* Responsive */
 @media screen and (max-width: 500px) {
   .menu__list > li {
-    font-size: 50px;
+    font-size: 35px;
+    margin-bottom: 0.5rem;
+  }
+  .menu__image {
+    width: 6rem;
   }
 }
