--- a/src/assets/styles/team.css
+++ b/src/assets/styles/team.css
@@ -14,6 +14,9 @@
   justify-content: center;
   align-items: center;
 }
+.team-selection__inner {
+  padding-top: 50px;
+}
 .team__name {
   position: absolute;
   left: 1rem;
@@ -35,7 +38,8 @@
 /* Responsive */
 @media screen and (max-width: 500px) {
   .team__name {
-    font-size: 50px;
+    font-size: 38px;
+    line-height: 1.2;
   }
   .team__text {
     max-width: 75%;
