major CSS rewrite, responsiveness rules

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,20 +1,90 @@
 html, body {
-  font-size: 17px;
   scroll-behavior: smooth;
 }
 body, input, button, label, p {
   font-family: Lato, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+header {
+  z-index: 1;
+}
+h1, h2 {
+  color: #e41a1f;
+  font-weight: normal;
+}
+h1 {
+  font-family: "Bebas Neue", "Lato", sans-serif;
+  font-size: 1.5rem;
+  margin: 0;
+}
+h2 {
+  font-family: "Abril Fatface", "Lato", sans-serif;
+  line-height: 1.7rem;
+}
+ul {
+  font-family: "Abril Fatface", "Lato", sans-serif;
 }
 a {
   text-decoration: none;
   color: currentColor;
 }
-p {
-    line-height: 2;
-  }
+input, a, button, label, p, span {
+  font-size: 0.95rem;
+  line-height: 1.9;
+}
 
-*:focus:not(:focus-visible),
-*:focus:not(:focus-visible)::before,
-*:focus:not(:focus-visible)::after {
-  outline: none !important;
+@media screen and (min-width: 1000px) {
+  input, a, button, label, p, span {
+  font-size: 1.1rem;
+  line-height: 2;
+}
+  h1 {
+    font-size: 3.5rem;
+    height: 3.1rem;
+  }
+  h2 {
+    font-size: 3.2rem;
+    line-height: 3.5rem;
+    font-weight: bold;
+  }
+}
+
+/* Splashscreen */
+.splash {
+  width: 100%;
+  height: 100vh;
+  background: #e41a1f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: #fff;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+}
+.splash__logo {
+  width: 35%;
+  min-width: 80px;
+  max-width: 200px;
+}
+.splash::after {
+  content: "Tappen, um zu starten...";
+  position: absolute;
+  bottom: 2.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.8rem;
+  font-style: italic;
+  animation: appear 750ms ease-in;
+}
+@media screen and (min-width: 1150px) {
+  .splash::after {
+    content: "Klicken, um zu starten...";
+  }
+}
+
+/* Anpassung für Impressum, Kontakt, Kontakt */
+.static-main > * {
+  padding-top: 20vh;
 }
