--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+@import url(https://fonts.googleapis.com/css?family=Abril+Fatface);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 @font-face {
   font-family: "Bebas Neue";
