--- a/src/assets/styles/hamburgers.css
+++ b/src/assets/styles/hamburgers.css
@@ -20,76 +20,96 @@
   overflow: visible;
 }
 .hamburger:hover {
-    opacity: 0.7; }
-
+    opacity: 0.7;
+}
 .hamburger-box {
-  width: 40px;
-  height: 24px;
+  width: 30px;
+  height: 18px;
   display: inline-block;
-  position: relative; }
-
+  position: relative;
+}
 .hamburger-inner {
   display: block;
   top: 50%;
   margin-top: -2px;
 }
-  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 40px;
-    height: 4px;
-    background-color: #e41a1f;
-    border-radius: 4px;
-    position: absolute;
-    transition-property: transform;
-    transition-duration: 0.15s;
-    transition-timing-function: ease; }
-    .is-active > .hamburger-box > .hamburger-inner,
-    .is-active > .hamburger-box > .hamburger-inner::before,
-    .is-active > .hamburger-box > .hamburger-inner::after {
-      background-color: #fff;
-    }
-  .hamburger-inner::before, .hamburger-inner::after {
-    content: "";
-    display: block; }
-  .hamburger-inner::before {
-    top: -10px; }
-  .hamburger-inner::after {
-    bottom: -10px; }
-
-    .hamburger--spring .hamburger-inner {
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+  width: 30px;
+  height: 3px;
+  background-color: currentColor;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
+}
+.hamburger-inner::before, .hamburger-inner::after {
+  content: "";
+  display: block;
+}
+.hamburger-inner::before {
+  top: -10px;
+}
+.hamburger-inner::after {
+  bottom: -10px;
+}
+.hamburger--spring .hamburger-inner {
   top: 2px;
-  transition: background-color 0s 0.13s linear; }
+  transition: background-color 0s 0.13s linear;
+}
+.hamburger--spring .hamburger-inner::before {
+  top: 8px;
+  transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.hamburger--spring .hamburger-inner::after {
+  top: 16px;
+  transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.hamburger-x .hamburger--spring .hamburger-inner {
+  transition-delay: 0.22s;
+  background-color: transparent;
+}
+.hamburger-x .hamburger--spring .hamburger-inner::before {
+  top: 0;
+  transition: top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 10px, 0) rotate(45deg);
+}
+.hamburger-x .hamburger--spring .hamburger-inner::after {
+  top: 0;
+  transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translate3d(0, 10px, 0) rotate(-45deg);
+}
+
+@media screen and (min-width: 400px) {
+  .hamburger-box {
+    width: 36px;
+    height: 24px;
+  }
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 36px;
+    height: 4px;
+  }
   .hamburger--spring .hamburger-inner::before {
     top: 10px;
-    transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+  }
   .hamburger--spring .hamburger-inner::after {
     top: 20px;
-    transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+  }
+}
 
-.hamburger--spring.is-active .hamburger-inner {
-  transition-delay: 0.22s;
-  background-color: transparent; }
-  .hamburger--spring.is-active .hamburger-inner::before {
-    top: 0;
-    transition: top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translate3d(0, 10px, 0) rotate(45deg); }
-  .hamburger--spring.is-active .hamburger-inner::after {
-    top: 0;
-    transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translate3d(0, 10px, 0) rotate(-45deg); }
-
-    @media screen and (max-width: 950px) {
-      .hamburger-box {
-        width: 30px;
-        height: 18px;
-      }
-      .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-         width: 30px;
-         height: 3px;
-      }
-      .hamburger--spring .hamburger-inner::before {
-          top: 7px;
-      }
-      .hamburger--spring .hamburger-inner::after {
-          top: 15px;
-      }
-    }
+@media screen and (min-width: 1000px) {
+  .hamburger-box {
+    width: 56px;
+    height: 28px;
+  }
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 56px;
+    height: 5px;
+  }
+  .hamburger--spring .hamburger-inner::before {
+    top: 14px;
+  }
+  .hamburger--spring .hamburger-inner::after {
+    top: 28px;
+  }
+}
