--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -8,6 +8,20 @@
   opacity: 0;
 }
 
+*:focus:not(:focus-visible),
+*:focus:not(:focus-visible)::before,
+*:focus:not(:focus-visible)::after {
+  outline: none !important;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 @keyframes pulse {
   0% {
     transform: scale(1);
