--- a/src/assets/styles/article-selection.css
+++ b/src/assets/styles/article-selection.css
@@ -1,7 +1,7 @@
 .article-selection, .team-selection {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     left: 0;
     top: 0;
     z-index: 110;
@@ -24,7 +24,7 @@
 }
 .article-selection__button, .team-selection__button {
   position: relative;
-  background:none;
+  background: none;
   border: none;
   color: #e41a1f;
   font-family: "Abril Fatface", cursive;
@@ -34,6 +34,7 @@
   padding-left: 20px;
   display: flex;
   align-items: center;
+  -webkit-tap-highlight-color: transparent;
 }
 .article-selection__button--loading::before {
   content: '';
