--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -9,6 +9,7 @@
   left: 0;
   width: 100%;
   height: 70px;
+  pointer-events: none;
   background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(2px);
 }
