--- a/src/assets/styles/team.css
+++ b/src/assets/styles/team.css
@@ -7,6 +7,7 @@
   cursor: pointer;
   align-self: center;
   padding: 0;
+  pointer-events: all;
 }
 
 @media screen and (min-width: 400px) {
@@ -14,6 +15,7 @@
     font-size: 2.2rem;
   }
 }
+
 @media screen and (min-width: 1000px) {
   .article__title--team {
     font-size: 3.8rem;
