--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -13,6 +13,9 @@
 *:focus:not(:focus-visible)::after {
   outline: none !important;
 }
+*, ::before, ::after {
+  -webkit-tap-highlight-color: transparent;
+}
 
 @keyframes appear {
   from {
