--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -26,6 +26,11 @@
   color: #e41a1f;
 }
 
+/* Header auf Startseite erst anzeigen, wenn erster Artikel geladen */
+.empty .header {
+  display: none;
+}
+
 @media screen and (min-width: 400px) {
   .header::before, .header__inner {
     height: 80px;
