--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   font-size: 2rem;
+  text-decoration: none;
 }
 .menu__item--logo {
   line-height: 0;
