--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -109,7 +109,7 @@
   font-size: 1.25rem;
   line-height: 2.35rem;
 }
-.article__teaser-author {
+.article__teaser-author, .article__teaser-author a {
   font-size: 1rem;
 }
 
