--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -30,6 +30,7 @@
   align-items: center;
 }
 .menu__list {
+  font-family: Abril Fatface, Lato, sans-serif;
   margin: 0;
   padding: 0;
   list-style: none;
