--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -52,6 +52,7 @@
 }
 .article__title {
   margin: 0 4rem;
+  text-align: center;
 }
 @media screen and (max-width: 350px) {
   .article__title {
@@ -151,7 +152,6 @@
 .article__image {
   width: 100%;
   max-width: 100%;
-  object-fit: cover;
   max-height: 100vh;
 }
 
@@ -204,9 +204,7 @@
     max-width: 47rem;
   }
   .article__image--fullwidth {
-  width: 100%;
-  max-width: 100%;
-  max-height: 100vh;
-  object-fit: cover;
+    width: 100%;
+    max-width: 100%;
   }
 }
