--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -74,6 +74,7 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   max-width: inherit;
 }
 
