--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -101,14 +101,21 @@
 /* Teaser + Author, mittig in Bildschirm füllendem Container */
 .article__teaser {
   position: absolute;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .article__teaser-text {
+  width: 100%;
   font-size: 1.25rem;
   line-height: 2.35rem;
 }
