--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -37,7 +37,7 @@
   }
 }
 @media screen and (min-width: 1000px) {
-  /* Header-Hintegrund am Desktop nicht anzeigen */
+  /* Header-Hintergrund am Desktop nicht anzeigen */
   .header::before {
     height: 100px;
   }
