--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -117,6 +117,9 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   color: #fff;
   position: relative;
 }
+.empty .splash {
+  cursor: default;
+}
 .splash {
   transition: height 200ms ease-out;
   height: calc(var(--vh, 1vh) * 100);
