--- a/src/assets/styles/subpages.css
+++ b/src/assets/styles/subpages.css
@@ -1,9 +1,17 @@
 .article--subpage {
   min-height: 100vh;
 }
+
+/* Footer abziehen */
 .article--subpage:last-child {
-  /* Footer abziehen */
   min-height: calc(100vh - 3rem);
+}
+/* Klicks auf Footer durchlassen */
+.article--subpage:last-child .article__teaser--subpage {
+  pointer-events: none;
+}
+.article--subpage:last-child .article__teaser--subpage * {
+  pointer-events: all;
 }
 
 .article__title--subpage {
@@ -15,10 +23,70 @@
   pointer-events: all;
 }
 
+.team__image {
+  width: 60%;
+  max-width: 230px;
+  position: absolute;
+  z-index: -1;
+}
+.team__image::before {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+.team__image::after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0) 32%,
+    rgba(255,255,255,0.6) 50%,
+    rgba(255,255,255,1) 88%
+    );
+}
+.team__image > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  transition: transform 600ms ease-out, opacity 600ms ease-in-out;
+}
+
+.team__text {
+  font-size: 14px;
+  line-height: 20px;
+  transition: transform 350ms 250ms ease-out, opacity 350ms 250ms ease-in-out;
+  opacity: 0;
+}
+.show-image .team__image img {
+  transform: translateY(-50%) translateY(-1rem);
+  opacity: 1;
+}
+.show-image .team__text {
+  transform: translateY(50%) translateY(0.5rem);
+  opacity: 1;
+}
+
 .article--subpage .article__subtitle {
   font-weight: normal;
 }
 
+@media screen and (min-width: 370px) {
+  .team__text {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+  }
+}
 @media screen and (min-width: 400px) {
   .article__title--subpage {
     font-size: 2.2rem;
@@ -27,6 +95,10 @@
 @media screen and (min-width: 700px) {
   .article--subpage:last-child {
     min-height: calc(100vh - 5rem);
+  }
+  .team__text {
+    font-size: 1.8rem;
+    line-height: 2.6rem;
   }
 }
 @media screen and (min-width: 1000px) {
