--- a/src/assets/styles/subpages.css
+++ b/src/assets/styles/subpages.css
@@ -19,6 +19,11 @@
   font-weight: normal;
 }
 
+.print__magazine-image {
+  max-height: 100%;
+  max-width: 95%;
+}
+
 @media screen and (min-width: 400px) {
   .article__title--subpage {
     font-size: 2.2rem;
@@ -27,6 +32,9 @@
 @media screen and (min-width: 700px) {
   .article--subpage:last-child {
     min-height: calc(100vh - 5rem);
+  }
+  .print__magazine-image {
+    max-width: 85%;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -39,5 +47,13 @@
   }
   .article--subpage .article__subtitle {
     font-size: 2.6rem;
+  }
+  .print__magazine-image {
+    max-width: 75%;
+  }
+}
+@media screen and (min-width: 1350px) {
+  .print__magazine-image {
+    max-width: 1250px;
   }
 }
