fix team image position in IE

--- a/src/assets/styles/subpages.css
+++ b/src/assets/styles/subpages.css
@@ -28,6 +28,8 @@
   max-width: 230px;
   position: absolute;
   z-index: -1;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .team__image::before {
   content: '';
