--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -46,7 +46,7 @@ blockquote {
 a {
   color: currentColor;
 }
-input, button, label, p, a, span {
+input, button, label, p, a {
   font-size: 0.95rem;
   line-height: 1.9;
 }
@@ -84,7 +84,7 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   }
 }
 @media screen and (min-width: 1000px) {
-  input, button, label, p, a, span {
+  input, button, label, p, a {
     font-size: 1.1rem;
     line-height: 2;
   }
