--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -13,13 +13,13 @@
 }
 
 /* Loading-Bar, erscheint am unteren Rand während nächster Artikel lädt */
-.article[data-loaded="false"] {
+.article[data-loaded='false'] {
   height: 70px;
   background: #e41a1f;
   justify-content: center;
   padding-bottom: 0;
 }
-.article[data-loaded="false"]::before {
+.article[data-loaded='false']::before {
   content: '';
   height: 25px;
   width: 25px;
@@ -27,7 +27,7 @@
   border-radius: 50%;
   animation: pulse 1250ms linear infinite;
 }
-.article[data-loaded="false"]::after {
+.article[data-loaded='false']::after {
   content: 'Nächster Artikel wird geladen...';
   font-family: Abril Fatface, Lato, sans-serif;
   color: #fff;
@@ -35,8 +35,8 @@
 }
 /* Loading-Bar bei allererstem Artikel und bei allen Artikeln, vor denen sich
    noch ein nicht geladenen Artikel befindet, verstecken */
-.article[data-loaded="false"]:first-child,
-.article[data-loaded="false"] ~ .article[data-loaded="false"] {
+.article[data-loaded='false']:first-child,
+.article[data-loaded='false'] ~ .article[data-loaded='false'] {
   display: none;
 }
 
@@ -79,7 +79,7 @@
   z-index: 1;
 }
 .article__number {
-  font-family: "Abril Fatface", sans-serif;
+  font-family: 'Abril Fatface', sans-serif;
   font-size: 36px;
   height: 36px;
   overflow: hidden;
@@ -124,7 +124,8 @@
   font-size: 1.25rem;
   line-height: 2.35rem;
 }
-.article__teaser-author, .article__teaser-author a {
+.article__teaser-author,
+.article__teaser-author a {
   font-size: 1rem;
 }
 
@@ -155,7 +156,8 @@
 }
 
 /* Ab hier: Text Styling */
-.article__text--highlighted, .article__interview {
+.article__text--highlighted,
+.article__interview {
   color: #e41a1f;
   font-weight: bold;
 }
@@ -164,14 +166,16 @@
   color: #e41a1f;
 }
 
-.article__text--quote, .article__subtitle {
+.article__text--quote,
+.article__subtitle {
   font-family: Abril Fatface, Lato, sans-serif;
   font-size: 1.3rem;
   color: #e41a1f;
   font-weight: normal;
 }
 
-.article__text--quote, .article__subtitle {
+.article__text--quote,
+.article__subtitle {
   width: 80vw;
   max-width: 72rem;
 }
@@ -184,7 +188,9 @@
 }
 
 @media screen and (min-width: 400px) {
-  .article[data-loaded="false"], .article__header, .article__number-container {
+  .article[data-loaded='false'],
+  .article__header,
+  .article__number-container {
     height: 80px;
   }
   .article__number {
@@ -202,7 +208,9 @@
 }
 
 @media screen and (min-width: 1000px) {
-  .article[data-loaded="false"], .article__header, .article__number-container {
+  .article[data-loaded='false'],
+  .article__header,
+  .article__number-container {
     height: 100px;
   }
   .article__number {
