--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,400,700);
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,400,700');
 
 @font-face {
-  font-family: "Bebas Neue";
-  src: url(../fonts/BebasNeue.otf) format("opentype");
+  font-family: 'Bebas Neue';
+  src: url('../fonts/BebasNeue.otf') format('opentype');
 }
