--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -3,7 +3,7 @@
   top: 0;
 }
 .header::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -32,7 +32,8 @@
 }
 
 @media screen and (min-width: 400px) {
-  .header::before, .header__inner {
+  .header::before,
+  .header__inner {
     height: 80px;
   }
 }
