--- a/src/assets/styles/subpages.css
+++ b/src/assets/styles/subpages.css
@@ -16,7 +16,7 @@
 
 .article__title--subpage {
   margin: 0;
-  font-family: "Abril Fatface", "Lato", sans-serif;
+  font-family: 'Abril Fatface', 'Lato', sans-serif;
   cursor: pointer;
   align-self: center;
   padding: 0;
@@ -48,11 +48,11 @@
   opacity: 0.95;
   background: linear-gradient(
     to bottom,
-    rgba(255,255,255,0) 0%,
-    rgba(255,255,255,0) 32%,
-    rgba(255,255,255,0.6) 50%,
-    rgba(255,255,255,1) 88%
-    );
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 32%,
+    rgba(255, 255, 255, 0.6) 50%,
+    rgba(255, 255, 255, 1) 88%
+  );
 }
 .team__image > img {
   position: absolute;
