--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -13,7 +13,9 @@
 *:focus:not(:focus-visible)::after {
   outline: none !important;
 }
-*, ::before, ::after {
+*,
+::before,
+::after {
   -webkit-tap-highlight-color: transparent;
 }
 
