--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -24,6 +24,9 @@
   align-items: center;
   padding-right: 1rem;
 }
+.has-scrollbar .menu__header {
+  padding-right: 2rem;
+}
 .menu__nav {
   flex-grow: 1;
   display: flex;
@@ -53,7 +56,7 @@
   max-width: 5.5rem;
 }
 
-@media screen and (min-width: 400px) {
+@media (--viewport-tablet) {
   .menu__header {
     height: 80px;
   }
@@ -64,7 +67,7 @@
     max-width: 6.5rem;
   }
 }
-@media screen and (min-width: 1000px) {
+@media (--viewport-desktop) {
   .menu__header {
     height: 100px;
   }
