--- a/src/assets/styles/subpages.css
+++ b/src/assets/styles/subpages.css
@@ -97,12 +97,12 @@
   max-width: 95%;
 }
 
-@media screen and (min-width: 400px) {
+@media (--viewport-tablet) {
   .article__title--subpage {
     font-size: 2.2rem;
   }
 }
-@media screen and (min-width: 700px) {
+@media (--viewport-tablet-xl) {
   .article--subpage:last-child {
     min-height: calc(100vh - 5rem);
   }
@@ -114,7 +114,7 @@
     max-width: 85%;
   }
 }
-@media screen and (min-width: 1000px) {
+@media (--viewport-desktop) {
   .article__title--subpage {
     font-size: 3.8rem;
     height: 4.2rem;
