--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -187,7 +187,7 @@
   margin: 1.5rem 0;
 }
 
-@media screen and (min-width: 400px) {
+@media (--viewport-tablet) {
   .article[data-loaded='false'],
   .article__header,
   .article__number-container {
@@ -207,7 +207,7 @@
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media (--viewport-desktop) {
   .article[data-loaded='false'],
   .article__header,
   .article__number-container {
