--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -72,7 +72,8 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   flex-direction: column;
   justify-content: center;
   overflow: hidden;
-  background: url(/src/assets/images/image-loading.svg) center / 100px no-repeat;
+  background: url('/src/assets/images/image-loading.svg') center / 100px
+    no-repeat;
 }
 .image > picture {
   display: block;
@@ -90,12 +91,12 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   max-width: inherit;
 }
 
-@media screen and (min-width: 400px) {
+@media (--viewport-tablet) {
   .image {
     background-size: 130px;
   }
 }
-@media screen and (min-width: 1000px) {
+@media (--viewport-desktop) {
   input,
   button,
   label,
@@ -194,17 +195,17 @@ gegen Content-Jump, vgl. https://www.voorhoede.nl/en/blog/say-no-to-image-reflow
   display: none;
 }
 
-@media screen and (min-width: 400px) {
+@media (--viewport-tablet) {
   .footer__logo {
     max-width: 6.5rem;
   }
 }
-@media screen and (min-width: 700px) {
+@media (--viewport-tablet-xl) {
   .footer {
     height: 5rem;
   }
 }
-@media screen and (min-width: 1000px) {
+@media (--viewport-desktop) {
   .footer {
     height: 7rem;
   }
