--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -7,6 +7,9 @@
 .invisible {
   opacity: 0;
 }
+.no-wrap {
+  white-space: nowrap;
+}
 
 *:focus:not(:focus-visible),
 *:focus:not(:focus-visible)::before,
